--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,15 @@ body {
   min-height: 100vh;
 }
 
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+
 .container {
   text-align: center;
   background-color: white;
