--- a/css/style.css
+++ b/css/style.css
@@ -224,17 +224,30 @@ p {
   color: #a0aec0;
 }
 
-
-
 /* Responsive Styles */
 @media (max-width: 600px) {
-  .countdown {
-      flex-direction: column; /* Stack countdown items vertically on small screens */
-      align-items: center; /* Center items */
+  .container {
+    margin: 1rem;
+    padding: 2rem 1rem;
   }
-
+  
+  .countdown {
+    flex-direction: column;
+    align-items: center;
+  }
+  
   .countdown-item {
-      margin-bottom: 10px; /* Add space between stacked items */
+    margin-bottom: 10px;
+    width: 120px;
+  }
+  
+  .subscribe-form {
+    flex-direction: column;
+  }
+  
+  .subscribe-form input {
+    margin-right: 0;
+    margin-bottom: 1rem;
   }
 }
 
